# pydata-li-api

./: pyproject.toml
notebooks/: 1.0-daveg-graphql-requests.ipynb  1.0-daveg-rescuetime-post.ipynb
