[tool.poetry]
name = "pydata-li-api"
version = "0.1.0"
description = ""
authors = ["oneextrafact <1extrafact@gmail.com>"]
readme = "README.md"
packages = [{include = "pydata_li_api"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.30.0"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
